[package]
name = "webapp-framework"
version = "0.1.0"
edition = "2021"

# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { workspace = true }
# -- Web
axum = { workspace = true }
tower-http = { workspace = true }
tower-cookies = { workspace = true }

# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Rpc
rpc-router = { workspace = true }
# -- Others
time = { workspace = true }
uuid = {version = "1", features = ["v4","fast-rng",]}
strum_macros = "0.27.0"
derive_more = { workspace = true }
tokio-rustls = "0.26.1"
rustls = "0.23.23"
rustls-pemfile = "2.2.0"
notify = "8.0.0"  # For certificate reloading

[lints]
workspace = true
